--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,9 @@
               <a href="./index.html" class="link link-style">Studio</a>
             </li>
             <li class="header-item">
-              <a href="./portfolio.html" class="link link-style">Portfolio</a>
+              <a href="./portfolio.html" class="link link-style active"
+                >Portfolio</a
+              >
             </li>
             <li class="header-item">
               <a href="" class="link link-style">Contacts</a>
@@ -57,13 +59,17 @@
     <main>
       <!-- Main section -->
       <section class="main-section">
-        <div class="container container-buttons">
+        <div class="container preview-container">
           <ul class="main-button list">
-            <li><button type="button" class="main-button-item">All</button></li>
+            <li>
+              <button type="button" class="main-button-item">All</button>
+            </li>
             <li>
               <button type="button" class="main-button-item">Web Site</button>
             </li>
-            <li><button type="button" class="main-button-item">App</button></li>
+            <li>
+              <button type="button" class="main-button-item">App</button>
+            </li>
             <li>
               <button type="button" class="main-button-item">Design</button>
             </li>
@@ -71,99 +77,197 @@
               <button type="button" class="main-button-item">Marketing</button>
             </li>
           </ul>
-        </div>
 
-        <h1 hidden></h1>
-        <h2 hidden class="preview">Preview section photos</h2>
-        <div class="container preview-container">
+          <h1 hidden></h1>
+          <h2 hidden class="preview">Preview section photos</h2>
+
           <ul class="preview-list list">
             <li class="preview-item">
-              <img
-                src="./images/page-2/img-1.jpg"
-                alt="Banking App Interface Concept"
-              />
-              <h3 class="preview-name">Banking App Interface Concept</h3>
-              <p class="preview-test">App</p>
+              <a href="" class="item-link link">
+                <div class="item-top">
+                  <img
+                    src="./images/page-2/img-1.jpg"
+                    alt="Banking App Interface Concept"
+                  />
+                  <p class="preview-item-text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="preview-text">
+                  <h3 class="preview-name">Banking App Interface Concept</h3>
+                  <p class="preview-test">App</p>
+                </div>
+              </a>
             </li>
             <li class="preview-item">
-              <img
-                src="./images/page-2/img-2.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-              <h3 class="preview-name">Cashless Payment</h3>
-              <p class="preview-test">Marketing</p>
+              <a href="" class="item-link link">
+                <div class="item-top">
+                  <img
+                    src="./images/page-2/img-2.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="preview-item-text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="preview-text">
+                  <h3 class="preview-name">Cashless Payment</h3>
+                  <p class="preview-test">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="preview-item">
-              <img
-                src="./images/page-2/img-3.jpg"
-                alt="Meditaion App"
-                width="360"
-                height="300"
-              />
-              <h3 class="preview-name">Meditaion App</h3>
-              <p class="preview-test">App</p>
+              <a href="" class="item-link link">
+                <div class="item-top">
+                  <img
+                    src="./images/page-2/img-3.jpg"
+                    alt="Meditaion App"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="preview-item-text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="preview-text">
+                  <h3 class="preview-name">Meditaion App</h3>
+                  <p class="preview-test">App</p>
+                </div>
+              </a>
             </li>
             <li class="preview-item">
-              <img
-                src="./images/page-2/img-4.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <h3 class="preview-name">Taxi Service</h3>
-              <p class="preview-test">Marketing</p>
+              <a href="" class="item-link link">
+                <div class="item-top">
+                  <img
+                    src="./images/page-2/img-4.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="preview-item-text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="preview-text">
+                  <h3 class="preview-name">Taxi Service</h3>
+                  <p class="preview-test">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="preview-item">
-              <img
-                src="./images/page-2/img-5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <h3 class="preview-name">Screen Illustrations</h3>
-              <p class="preview-test">Design</p>
+              <a href="" class="item-link link">
+                <div class="item-top">
+                  <img
+                    src="./images/page-2/img-5.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="preview-item-text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="preview-text">
+                  <h3 class="preview-name">Screen Illustrations</h3>
+                  <p class="preview-test">Design</p>
+                </div>
+              </a>
             </li>
             <li class="preview-item">
-              <img
-                src="./images/page-2/img-6.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <h3 class="preview-name">Online Courses</h3>
-              <p class="preview-test">Marketing</p>
+              <a href="" class="item-link link">
+                <div class="item-top">
+                  <img
+                    src="./images/page-2/img-6.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="preview-item-text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="preview-text">
+                  <h3 class="preview-name">Online Courses</h3>
+                  <p class="preview-test">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="preview-item">
-              <img
-                src="./images/page-2/img-7.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-                height="300"
-              />
-              <h3 class="preview-name">Instagram Stories Concept</h3>
-              <p class="preview-test">Design</p>
+              <a href="" class="item-link link">
+                <div class="item-top">
+                  <img
+                    src="./images/page-2/img-7.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="preview-item-text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="preview-text">
+                  <h3 class="preview-name">Instagram Stories Concept</h3>
+                  <p class="preview-test">Design</p>
+                </div>
+              </a>
             </li>
             <li class="preview-item">
-              <img
-                src="./images/page-2/img-8.jpg"
-                alt="Organic Food"
-                width="360"
-                height="300"
-              />
-              <h3 class="preview-name">Organic Food</h3>
-              <p class="preview-test">Web Site</p>
+              <a href="" class="item-link link">
+                <div class="item-top">
+                  <img
+                    src="./images/page-2/img-8.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="preview-item-text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="preview-text">
+                  <h3 class="preview-name">Organic Food</h3>
+                  <p class="preview-test">Web Site</p>
+                </div>
+              </a>
             </li>
             <li class="preview-item">
-              <img
-                src="./images/page-2/img-9.jpg"
-                alt="Fresh Coffee"
-                width="360"
-                height="300"
-              />
-              <h3 class="preview-name">Fresh Coffee</h3>
-              <p class="preview-test">Web Site</p>
+              <a href="" class="item-link link">
+                <div class="item-top">
+                  <img
+                    src="./images/page-2/img-9.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="preview-item-text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="preview-text">
+                  <h3 class="preview-name">Fresh Coffee</h3>
+                  <p class="preview-test">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -173,16 +277,73 @@
 
     <!-- Footer section-->
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="footer-logo"
-          ><span class="logo-colour">Web</span>Studio</a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-logo-item">
+          <a href="./index.html" class="footer-logo"
+            ><span class="logo-colour">Web</span>Studio</a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footermedia">
+          <h3 class="footer-head">Social media</h3>
+          <ul class="social-link list">
+            <li class="team-social list">
+              <a href="" class="team-social-link">
+                <svg class="team-social-icon" width="24" height="24">
+                  <use href="./images/svg/symbol.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-social list">
+              <a href="" class="team-social-link">
+                <svg class="team-social-icon" width="24" height="24">
+                  <use href="./images/svg/symbol.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-social list">
+              <a href="" class="team-social-link">
+                <svg class="team-social-icon" width="24" height="24">
+                  <use href="./images/svg/symbol.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-social list">
+              <a href="" class="team-social-link">
+                <svg class="team-social-icon" width="24" height="24">
+                  <use href="./images/svg/symbol.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <form class="footer-form">
+          <div class="footer-subscribe">
+            <h3 class="footer-head">Subscribe</h3>
+            <label for="email" class="footee-label"></label>
+            <input
+              type="email"
+              id="email"
+              class="form-input"
+              name="email"
+              placeholder="Email"
+              required
+            />
+            <button type="submit" class="hero-btn">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="20">
+                <use href="./images/svg/symbol.svg#icon-subscribe"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
     <!-- /Footer section-->
+    <script src="./js/modal.js"></script>
   </body>
 </html>
