--- a/index.html
+++ b/index.html
@@ -74,64 +74,62 @@
           </svg>
         </button>
 
-        <ul class="mobile-menu container">
-          <li class="header-item">
-            <a href="./index.html" class="link link-style">Studio</a>
-          </li>
-          <li class="header-item">
-            <a href="./portfolio.html" class="link link-style">Portfolio</a>
-          </li>
-          <li class="header-item">
-            <a href="" class="link link-style active">Contacts</a>
-          </li>
-          <div class="mobile-menu-contacts">
-            <li class="link">
+        <div class="mobile-menu container">
+          <ul class="mobile-menu-list list">
+            <li class="header-item">
+              <a href="./index.html" class="link link-style">Studio</a>
+            </li>
+            <li class="header-item">
+              <a href="./portfolio.html" class="link link-style">Portfolio</a>
+            </li>
+            <li class="header-item">
+              <a href="" class="link link-style active">Contacts</a>
+            </li>
+
+            <li class="mobile-link">
               <a href="tel:+110001111111" class="header-contacts-phone link"
                 >+11 (000) 111-11-11</a
               >
-            </li>
 
-            <li class="link">
               <a
                 href="mailto:info@devstudio.com"
                 class="header-contacts-mail link"
                 >info@devstudio.com</a
               >
             </li>
-          </div>
-          <div class="footermedia">
-            <ul class="social-link list">
-              <li class="team-social list">
-                <a href="" class="team-social-link">
-                  <svg class="team-social-icon" width="24" height="24">
-                    <use href="./images/svg/symbol.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="team-social list">
-                <a href="" class="team-social-link">
-                  <svg class="team-social-icon" width="24" height="24">
-                    <use href="./images/svg/symbol.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="team-social list">
-                <a href="" class="team-social-link">
-                  <svg class="team-social-icon" width="24" height="24">
-                    <use href="./images/svg/symbol.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="team-social list">
-                <a href="" class="team-social-link">
-                  <svg class="team-social-icon" width="24" height="24">
-                    <use href="./images/svg/symbol.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </ul>
+          </ul>
+
+          <ul class="social-link list">
+            <li class="team-social list">
+              <a href="" class="team-social-link">
+                <svg class="team-social-icon" width="24" height="24">
+                  <use href="./images/svg/symbol.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-social list">
+              <a href="" class="team-social-link">
+                <svg class="team-social-icon" width="24" height="24">
+                  <use href="./images/svg/symbol.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-social list">
+              <a href="" class="team-social-link">
+                <svg class="team-social-icon" width="24" height="24">
+                  <use href="./images/svg/symbol.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-social list">
+              <a href="" class="team-social-link">
+                <svg class="team-social-icon" width="24" height="24">
+                  <use href="./images/svg/symbol.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
 
@@ -220,28 +218,52 @@
           <h2 class="examples-title">What are we doing</h2>
           <ul class="examples-list list">
             <li class="exampless-item">
-              <img
-                src="./images/section-2-1.jpg"
-                alt="work image"
-                width="360"
-                height="300"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/section-2-1.jpg    1x,
+                    ./images/section-2-1-x2.jpg 2x
+                  "
+                />
+                <img
+                  src="./images/section-2-1.jpg"
+                  alt="work image"
+                  width="360"
+                  height="300"
+                />
+              </picture>
             </li>
             <li class="exampless-item">
-              <img
-                src="./images/section-2-2.jpg"
-                alt="work image"
-                width="360"
-                height="300"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/section-2-2.jpg    1x,
+                    ./images/section-2-2-x2.jpg 2x
+                  "
+                />
+                <img
+                  src="./images/section-2-2.jpg"
+                  alt="work image"
+                  width="360"
+                  height="300"
+                />
+              </picture>
             </li>
             <li class="exampless-item">
-              <img
-                src="./images/section-2-3.jpg"
-                alt="work image"
-                width="360"
-                height="300"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/section-2-3.jpg    1x,
+                    ./images/section-2-3-x2.jpg 2x
+                  "
+                />
+                <img
+                  src="./images/section-2-3.jpg"
+                  alt="work image"
+                  width="360"
+                  height="300"
+                />
+              </picture>
             </li>
           </ul>
         </div>
@@ -256,12 +278,18 @@
           <h2 class="team-title">Our Team</h2>
           <ul class="teamt-list list">
             <li class="team-item">
-              <img
-                src="./images/team-1.jpg"
-                alt="team player photo"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./images/team-1.jpg 1x, ./images/team-1-x2.jpg 2x"
+                />
+                <img
+                  src="./images/team-1.jpg"
+                  alt="team player photo"
+                  width="264"
+                  height="260"
+                />
+              </picture>
+
               <div class="team-content">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
@@ -300,12 +328,18 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                src="./images/team-2.jpg"
-                alt="team player photo"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./images/team-2.jpg 1x, ./images/team-2-x2.jpg 2x"
+                />
+                <img
+                  src="./images/team-2.jpg"
+                  alt="team player photo"
+                  width="264"
+                  height="260"
+                />
+              </picture>
+
               <div class="team-content">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
@@ -344,12 +378,18 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                src="./images/team-3.jpg"
-                alt="team player photo"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./images/team-3.jpg 1x, ./images/team-3-x2.jpg 2x"
+                />
+                <img
+                  src="./images/team-3.jpg"
+                  alt="team player photo"
+                  width="264"
+                  height="260"
+                />
+              </picture>
+
               <div class="team-content">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
@@ -388,12 +428,18 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                src="./images/team-4.jpg"
-                alt="team player photo"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./images/team-4.jpg 1x, ./images/team-4-x2.jpg 2x"
+                />
+                <img
+                  src="./images/team-4.jpg"
+                  alt="team player photo"
+                  width="264"
+                  height="260"
+                />
+              </picture>
+
               <div class="team-content">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
