--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/mobile.css" />
-    <link rel="stylesheet" href="./css/tablet.css" />
-    <link rel="stylesheet" href="./css/desktop.css" />
   </head>
 
   <body class="body">
@@ -77,13 +74,13 @@
         <div class="mobile-menu container">
           <ul class="mobile-menu-list list">
             <li class="header-item">
-              <a href="./index.html" class="link link-style">Studio</a>
+              <a href="./index.html" class="link link-style active">Studio</a>
             </li>
             <li class="header-item">
               <a href="./portfolio.html" class="link link-style">Portfolio</a>
             </li>
             <li class="header-item">
-              <a href="" class="link link-style active">Contacts</a>
+              <a href="" class="link link-style ">Contacts</a>
             </li>
 
             <li class="mobile-link">
