--- a/portfolio.html
+++ b/portfolio.html
@@ -322,9 +322,8 @@
         </div>
 
         <form class="footer-form">
-          <div class="footer-subscribe">
-            <h3 class="footer-head">Subscribe</h3>
-            <label for="email" class="footee-label"></label>
+          <h3 class="footer-head">Subscribe</h3>
+          <div class="footer-form-position">
             <input
               type="email"
               id="email"
